hphp/hack/test/typecheck/call_vs_prop.php.shared_memory_backend.exp
ERROR: File "call_vs_prop.php", line 6, characters 41-43:
Expected constant expression for initializer (Parsing[1002])
